--- a/BudgetAllowance/app/src/main/AndroidManifest.xml
+++ b/BudgetAllowance/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         <activity
             android:name=".newPayment"
             android:label="@string/title_activity_new_payment"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".addPayment"></activity>
     </application>
 
 </manifest>
